# cs240h-project

./: mix-server.cabal  stack.yaml
app/: MixServer.hs
doc/: outline.txt
network-house-local/: network-house.cabal
network-house-local/Net/: RTP.hs
network-house-local/check/: Check.hs
src/Audio/: Mixer.hs
src/Audio/Mixer/: Extensions.hs  Sources.hs  Types.hs  Utils.hs
