name:                mix-server
version:             0.1.0.0
synopsis:            Basic concurrent audio mixer and demo app
description:         Please see README.md
homepage:            http://github.com/githubuser/mix-server#readme
license:             BSD3
license-file:        LICENSE
author:              Jack OReilly
maintainer:          jmorei@stanford.edu
copyright:           2016 Jack OReilly
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Audio.Mixer
                     , Audio.Mixer.Extensions
                     , Audio.Mixer.Sources
                     , Audio.Mixer.Types
                     , Audio.Mixer.Utils
-- FIXME consider removing dependency on network-house here.  We only really
-- need a data format and a timestamp...
  build-depends:       array
                     , base >= 4.7 && < 5
                     , containers
                     , network-house
                     , pipes-concurrency
                     , stm
                     , time >= 1.6
  ghc-options:         -Wall
  default-language:    Haskell2010

executable mix-server
  hs-source-dirs:      app
  main-is:             MixServer.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       array
                     , base
                     , mix-server
                     , network
-- FIXME consider removing dep for exe
                     , network-house
                     , pulse-simple
                     , stm
                     , time >= 1.6
  default-language:    Haskell2010

test-suite mix-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mix-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/mix-server
